@@ -1,7 +1,7 @@
 ## Generators
 
 ```elixir 
-OEIS.Util.generate_function_sequences(~w(), in_module: Chunky.Sequence.OEIS.Core)
+OEIS.Util.generate_function_sequences(~w(A001057 A001333 A001481 A001699 A002033 A002110 A002530), in_module: Chunky.Sequence.OEIS.Core)
 OEIS.Util.generate_list_sequences(, in_module: Chunky.Sequence.OEIS.Factors)
 ```
 
@@ -12,16 +12,13 @@ OEIS.Util.generate_list_sequences(, in_module: Chunky.Sequence.OEIS.Factors)
 ## Core
 
 
-A001057
-A001333
+A001057 A001333 A001481 A001699 A002033 A002110 A002530
+
+
+
 A001462
-A001481
-A001699
-A002033
 A002083
-A002110
 A002322
-A002530
 A004011
 
 ## Powers
